--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Springboot
-spring.datasource.url=jdbc:postgresql://localhost:5432/your_db_name
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=feedback10$
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
